Add completed tasks filter
